# invenio-fzu

./: invenio.cfg  pyproject.toml
models/detectors/: metadata.yaml
ui/detectors/: __init__.py
ui/detectors/templates/semantic-ui/detectors/record_detail/: main.html
ui/particles/: __init__.py
